Attempt to fix video playback on iOS 11.2.2 in public interface.

--- a/signbank/static/css/signbank.css
+++ b/signbank/static/css/signbank.css
@@ -294,6 +294,9 @@ td .tag {
     padding-left: 3px;
     padding-right: 3px;
 }
+.video-public {
+    cursor:pointer;
+}
 .video-public:hover {
     cursor:pointer;
 }
